Panama: New module to help with native interop. Wooting: Switched to panama module.